--- a/challenge 4 - Random colored boxes/index.html
+++ b/challenge 4 - Random colored boxes/index.html
@@ -19,6 +19,15 @@
             width: 55px;
             border: 2px solid black;
         }
+
+        .boxes{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 55px;
+            width: 55px;
+            border: 2px solid black;
+        }
     </style>
 </head>
 <body>
@@ -28,6 +37,14 @@
         <div id="box3" class="box box3">Box</div>
         <div id="box4" class="box box4">Box</div>
         <div id="box5" class="box box5">Box</div>
+    </div>
+    <br>
+    <div id="cont" class="container">
+        <div class="boxes" id="box6">Box</div>
+        <div class="boxes" id="box7">Box</div>
+        <div class="boxes" id="box8">Box</div>
+        <div class="boxes" id="box9">Box</div>
+        <div class="boxes" id="box10">Box</div>
     </div>
     <script src="script.js"></script>
 </body>
